<resources>
    <string name="app_name">HarryPoster</string>
    <string name="poster">poster</string>
    <string name="movie_description">The magical journey begins! Join Harry Potter, an ordinary boy turned wizard,  as he embarks on his first year at Hogwarts School of Witchcraft and Wizardry. Alongside his friends Hermione Granger and Ron Weasley,  Harry discovers the hidden dangers of a powerful artifact—the Philosopher\'s Stone.  With dark forces looming, will Harry uncover the truth before it’s too late? A world of magic, mystery, and adventure awaits.  The magic is real. The adventure is unforgettable.</string>
    <string name="terms_and_conditions">
    Terms and Conditions:\n

    1. Use of the app is subject to acceptance of these terms.\n
    2. The app is provided "as is" without warranty of any kind.\n
    3. Users are responsible for the accuracy of the data they provide.\n
    4. Unauthorized use or reproduction of the app is prohibited.\n
    5. The app may collect data as described in the privacy policy.\n

    By using this app, you agree to abide by these terms and conditions.
    </string>
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="please_select_tickets">Please Select Tickets</string>
    <string name="adult_20">Adult 47₪ :</string>
    <string name="total_0">"Total: "</string>
    <string name="terms">Terms and Conditions</string>
    <string name="i_agree">I agree to the terms and conditions</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="child_10">Child 35₪ :</string>
    <string name="yes_planet_jerusalem">YES Planet Jerusalem</string>
    <string name="cinema_city_tel_aviv">Cinema City Tel Aviv</string>
    <string name="rav_hen_dizengoff">Rav Hen Dizengoff</string>
    <string name="globus_max_be_er_sheva">Globus Max Be\'er Sheva</string>
    <string name="yes_planet_haifa">YES Planet Haifa</string>
    <string name="select_location">Select Location</string>
    <string name="please_select_a_location">Please select a location</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="please_agree_to_the_terms_and_conditions">Please agree to the terms and conditions</string>
    <string name="please_enter_a_valid_10_digit_phone_number">Please enter a valid 10-digit phone number</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_select_at_least_one_ticket">Please select at least one ticket</string>
    <string name="your_order_summary">Your Order Summary</string>
    <string name="confirm">Complete an order</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="thank_you_for_agreeing_to_the_terms">Thank you for agreeing to the terms!</string>
    <string name="accept">Accept</string>
    <string name="total_number" translatable="false">"0₪ "</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="child_tickets">Child Tickets</string>
    <string name="adult_tickets">Adult Tickets</string>
    <string name="total">Total</string>
    <string name="currency_symbol" translatable="false">₪</string>

</resources>