<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="12dp"
            android:text="@string/your_order_summary"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/summary_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/animatedImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:src="@drawable/dobby3" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/green_slytherin"
                android:text="@string/accept"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/dark_red_gryffindor"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
